14_albli.tf
resource "aws_lb_listener" "jskim_albli" {
  load_balancer_arn = aws_lb.jskim_alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.jskim_albtg.arn
  }
}
